# XPLR-IOT-1-Air-Quality-Monitor-Example

./: .gitmodules  README.md
Gateway/: CMakeLists.txt  Readme.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
Gateway/src/: main.c  nina_config.c  nina_config.h
node-red/: AQM.json  Readme.md
sensor_broadcaster/: CMakeLists.txt  Readme.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
sensor_broadcaster/binaries/: Readme.md
sensor_broadcaster/binaries/mergedCores_binaries/: BLE_SensorBroadcaster_MINI.hex  BLE_SensorBroadcaster_XPLR.hex
sensor_broadcaster/binaries/separateCore_binaries/MINI_NORAB1_EVK/: app_core_MINI.hex  net_core_MINI.hex  program_MINI.bat
sensor_broadcaster/binaries/separateCore_binaries/XPLR_IOT_1/: app_core_XPLR.hex  net_core_XPLR.hex  program_XPLR.bat
sensor_broadcaster/scd4x_oot_driver/: CMakeLists.txt  Kconfig  Readme.md
sensor_broadcaster/scd4x_oot_driver/drivers/: CMakeLists.txt  Kconfig
sensor_broadcaster/scd4x_oot_driver/drivers/sensor/: CMakeLists.txt  Kconfig
sensor_broadcaster/scd4x_oot_driver/drivers/sensor/scd4x/: CMakeLists.txt  Kconfig  scd4x.c  scd4x.h
sensor_broadcaster/scd4x_oot_driver/dts/bindings/sensor/: sensirion,scd4x.yaml
sensor_broadcaster/scd4x_oot_driver/zephyr/: module.yml
sensor_broadcaster/src/: main.c
thingstream_flow/: Readme.md
tools/: format_code.sh
